--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- Navbar -->
         <div class="topnav" id="myTopnav">
-            <a href="#home" class="active">Home</a>
+            <!-- <a href="#home" class="active">Home</a> -->
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
